[project]
name = "tt-smi"
version = "1.0.0"
description = "ncurses based hardware monitoring for Tenstorrent silicon"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  { name = "Daniel Rosen", email = "drosen@tenstorrent.com" }
]
maintainers = [
  { name = "Daniel Rosen", email = "drosen@tenstorrent.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pyyaml == 6.0.1",
  "pyluwen @ git+ssh://git@github.com/tenstorrent/luwen.git@v0.1.0#subdirectory=crates/pyluwen",
  "tabulate == 0.9.0"
]

[project.urls]
"Homepage" = "http://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-flash/issues"
"Source" = "https://github.com/tenstorrent/tt-flash"

[project.scripts]
tt-flash = "tt_flash.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    ".ignored/version.txt",
    "data/*/*.yaml"
]

[tools.setuptools.exclude-package-data]
"*" = [
  'build',
]

[tool.setuptools.packages.find]
where = [ ".", ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

# vim: expandtab:ts=2:sw=2:ai
