[project]
name = "tt-flash"
version = "3.4.0"
description = "Utility to flash firmware blobs to tt devices"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  { name = "Daniel Rosen", email = "drosen@tenstorrent.com" }
]
maintainers = [
  { name = "Daniel Rosen", email = "drosen@tenstorrent.com" }
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console :: Curses",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
  "pyyaml == 6.0.2",
  "pyluwen @ git+https://github.com/tenstorrent/luwen.git@v0.7.5#subdirectory=crates/pyluwen",
  "tabulate == 0.9.0",
  "tomli == 2.0.1; python_version < '3.11'",

  # This is a hack to get around the lack of importlib-metadata pre 3.8.
  "importlib-metadata >= 1.4.0; python_version < '3.8'",

  # This is a hack to get around the lack of the files function in importlib-resources pre 3.9.
  "importlib-resources >= 1.3.0; python_version < '3.9'",

  "tt-tools-common @ git+https://github.com/tenstorrent/tt-tools-common.git@v1.4.17",
]

optional-dependencies.dev = [
  "black == 24.3.0; python_version > '3.7'",
  "black == 23.3.0; python_version == '3.7'"
]

[project.urls]
"Homepage" = "http://tenstorrent.com"
"Bug Reports" = "https://github.com/tenstorrent/tt-flash/issues"
"Source" = "https://github.com/tenstorrent/tt-flash"

[project.scripts]
tt-flash = "tt_flash.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [
    ".ignored/version.txt",
    "data/*/*.yaml"
]

[tool.setuptools.exclude-package-data]
"*" = [
  'build',
]

[tool.basedpyright]
pythonVersion = "3.7"
typeCheckingMode = "standard"

[tool.setuptools.packages.find]
where = [ ".", ]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = [
  "setuptools>=43.0.0",
  "wheel"
]
build-backend = "setuptools.build_meta"

# vim: expandtab:ts=2:sw=2:ai
